# Device-Drivers

ARM Cross-Compilation on QEMU/Chess Tournament Admin/: .gitignore  README.md
ARM Cross-Compilation on QEMU/Chess Tournament Admin/client/: clock.py  elo.py  engine_loader.py  gui.py  lichess_auth.py  main.py  nlp_parser.py  replay.py  requirements.txt  tcp_client.py  tournament.py  voice.py
ARM Cross-Compilation on QEMU/Chess Tournament Admin/scripts/: boot_qemu.sh  gdb_session.sh  inject_server.sh
ARM Cross-Compilation on QEMU/Chess Tournament Admin/server/: Makefile  game_state.hpp  server.cpp
ARM Cross-Compilation on QEMU/EDU Driver Project/: .gitignore  Readme.md
ARM Cross-Compilation on QEMU/EDU Driver Project/driver/: Makefile  edu_driver.c  test_edu.c
ARM Cross-Compilation on QEMU/EDU Driver Project/scripts/: build.sh  init  run_qemu.sh
ARM Cross-Compilation on QEMU/ecu_simulator/: README.md
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/: CMakeLists.txt  toolchain-riscv.cmake
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/freertos_config/: FreeRTOSConfig.h
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/hal/: hal_uart.cpp  hal_uart.hpp
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/include/: ecu_protocol.hpp  ecu_state.hpp
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/linker/: sifive_u.ld
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/src/: ecu_state.cpp  main.cpp  startup.S
ARM Cross-Compilation on QEMU/ecu_simulator/firmware/tasks/: task_can_tx.hpp  task_diag.hpp  task_engine.hpp  task_sensors.hpp  task_watchdog.hpp
ARM Cross-Compilation on QEMU/ecu_simulator/qt_gui/: CMakeLists.txt
ARM Cross-Compilation on QEMU/ecu_simulator/qt_gui/include/: CANMonitor.hpp  CANParser.hpp  ConnectionManager.hpp  DTCViewer.hpp  ECUDashboard.hpp  FaultInjector.hpp  MainWindow.hpp
ARM Cross-Compilation on QEMU/ecu_simulator/qt_gui/resources/: resources.qrc
ARM Cross-Compilation on QEMU/ecu_simulator/qt_gui/src/: CANMonitor.cpp  CANParser.cpp  ConnectionManager.cpp  DTCViewer.cpp  ECUDashboard.cpp  FaultInjector.cpp  MainWindow.cpp  main.cpp
ARM Cross-Compilation on QEMU/ecu_simulator/scripts/: build_firmware.sh  create_com_bridge.sh  launch_qemu.sh
ESP32 Projects/Handycam/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Handycam.ino  LICENSE  README.md
ESP32 Projects/Handycam/docs/: protocol.md
ESP32 Projects/Handycam/scripts/: handycam_nlp.py  test_api.sh
ESP32 Projects/Handycam/src/comms/: wifi_server.cpp  wifi_server.h
ESP32 Projects/Handycam/src/core/: camera_driver.cpp  camera_driver.h  frame_capture.cpp  frame_capture.h
ESP32 Projects/Handycam/src/execution/: command_parser.cpp  command_parser.h  scheduler.cpp  scheduler.h
ESP32 Projects/Handycam/src/filters/: filter_engine.cpp  filter_engine.h
ESP32 Projects/Handycam/src/system/: config.h  state_machine.cpp  (+1 more)
Linux/Adaptive Network Interface Driver/: main.c
Linux/Bit Banged UART Driver/: main.c
Linux/C Microkernel with Message Parsing/: main.c
Linux/CPU Affinity Mapper/: cpu_affinity_mapper.c  cpu_affinity_mapper.h  cpu_affinity_mapper_lib.c  makefile  testapp.c
Linux/Device Driver Sandbox/: sandbox_api.h  sandbox_core.c  sandboxctl.c
Linux/Encrypted RAM/: main.c
Linux/Ephemeral IP Tunneling Driver/: eptunnel.c
Linux/Eye Controlled Navigation/: Readme.md  driver.c
Linux/Filesystem Journalling/: main.c
Linux/Firmwatch Kernel Module/: Readme.md  makefile  module.c  userspace_utility.c
Linux/GPU Astro Background Driver/: astrodriver.c
Linux/GPU Overclock Protection Driver/: ovclock.c
Linux/Kernel Buffer Utilization/: Readme.md  bufstat.c  makefile
Linux/Keyboard Turing Machine/: main.c
Linux/Latency Benchmark Driver/: main.c
Linux/Load Unload History Monitor/: load_watchdog.c
Linux/Microkernel Driver Framework/: makefile  microkernel.c  microkernel.h  readme.md  sample_driver.c
Linux/Mouse Smoother/: main.c
Linux/Secure File Vault Driver/: secure_vault_driver.c  user_guide.c
Linux/Suspend and Remove Cycles/: testsuspend.c
Linux/Syscall Trace/: main.c
Linux/USB Watchdog Timer/: Readme.md  usbdriver.c
Linux/Virtual Filesystem Driver with Version Control/: main.c
Linux/Virtual Mouse/: main.c
Linux/Walkie/: Makefile  Readme.md  main.c  test_walkie.c
MicroPython/: bare_metal_driver.py  output_driver.py
MicroPython for ESP32/: input_driver.py
STM32F411RE Drivers/GPU Thread Sim Implementation/: Readme.md  app.cpp  app.h
STM32F411RE Drivers/LuaScriptDriver/: Readme.md  app.cpp
STM32F411RE Drivers/UART Driver/: uart.h
STM32FR11RE Drivers/UART Driver/: uart.c
STM32G071RB Drivers/: Readme.md
STM32G071RB Drivers/DMA Driver/: dma_driver.c  dma_driver.h  main.c  platformio.ini
